eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/LiveChatTranscript.object
<CustomObject>
    <fields>
        <fullName>Date_transcript_reviewed__c</fullName>
        <inlineHelpText>Please enter the date the manager reviewed the transcript</inlineHelpText>
        <label>Date transcript reviewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Live_Chat_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please enter the name of the live chat agent</inlineHelpText>
        <label>Live Chat Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Live_Chat_Transcripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Live_Chat_Transcripts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviwer_Comments__c</fullName>
        <description>This field is used to confirm that the Transcript has been reviewed by a manager within Customer services to confirm it complies with Lice Chat etiquette.</description>
        <inlineHelpText>Please add comments to confirm that the transcript has been reviewed as part of the live chat transcript.</inlineHelpText>
        <label>Manager Comments (Review)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>